@@ -3,14 +3,14 @@
 <!-- vim: set ai tw=80 ts=3 sw=3: -->
 <!DOCTYPE book PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN" "
               http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd" [
-                                                                                
+
 <!ENTITY FDL SYSTEM "fdl-appendix.xml">
 <!ENTITY FDLlink "<link linkend='fdl'>included</link>">
 ]><!-- =============Document Header ============================= -->
 <book id="index">
   <bookinfo>
     <title>GTK-Doc Manual</title>
-    <edition>1.4</edition>
+    <edition>1.8</edition>
     <authorgroup>
       <author>
         <firstname>Chris</firstname>
@@ -41,7 +41,7 @@
       </author>
     </authorgroup>
     <copyright>
-      <year>2000, 2005</year>
+      <year>2000, 2005, 2007</year>
       <holder>Dan Mueth and Chris Lyttle and Stefan Kost</holder>
     </copyright>
 
@@ -115,15 +115,25 @@
 
         <listitem>
           <para>
+            <guilabel>Writing the documentation.</guilabel>
+
+            The author fills in the source files with the documentation for each
+            function, macro, union etc. (In the past information was entered in
+            generated template files, which is not recommanded anymore).
+          </para>
+        </listitem>
+
+        <listitem>
+          <para>
             <guilabel>Gathering information about the code.</guilabel>
 
-            gtkdoc-scan scans the header files of the code looking for declarations of
+            <application>gtkdoc-scan</application> scans the header files of the code looking for declarations of
             functions, macros, enums, structs, and unions. It creates a list of the
             declarations, placing them into sections according to which header file they
             are in. The author can rearrange the sections, and the order of the
             declarations within them, to produce the final desired order.
-            
-            gtkdoc-scanobj can also be used to dynamically query a library about
+
+            <application>gtkdoc-scanobj</application> can also be used to dynamically query a library about
             any GtkObject subclasses it exports. It saves information about each
             object's position in the class hierarchy and about any GTK Args and Signals it
             provides.
@@ -134,7 +144,8 @@
           <para>
             <guilabel>Generating the "template" files.</guilabel>
 
-            gtkdoc-mktmpl creates a number of files in the tmpl/ subdirectory, using the
+            <application>gtkdoc-mktmpl</application> creates a number of files in
+            the <filename class='directory'>tmpl/</filename> subdirectory, using the
             information gathered in the first step. (Note that this can be run
             repeatedly. It will try to ensure that no documentation is ever lost.)
           </para>
@@ -142,23 +153,20 @@
 
         <listitem>
           <para>
-            <guilabel>Writing the documentation.</guilabel>
-
-            The author fills in the template files with the documentation for each
-            function, macro, union etc.
-          </para>
-        </listitem>
-
-        <listitem>
-          <para>
             <guilabel>Generating the SGML and HTML.</guilabel>
 
-            gtkdoc-mkdb turns the template files into SGML files in the sgml/
-            subdirectory.(If the source code contains documentation on functions, using the special
-            comment blocks, it gets merged in here.)
-            
-            gtkdoc-mkhtml turns the SGML files into HTML files in the html/
-            subdirectory.
+            <application>gtkdoc-mkdb</application> turns the template files into
+            SGML or XML files in the <filename class='directory'>sgml/</filename>
+            or <filename class='directory'>xml/</filename> subdirectory.
+            (If the source code contains documentation on functions, using the
+            special comment blocks, it gets merged in here.)
+
+            <application>gtkdoc-mkhtml</application> turns the SGML files into HTML
+            files in the <filename class='directory'>html/</filename>  subdirectory.
+
+            Files in <filename class='directory'>sgml/</filename> or
+            <filename class='directory'>xml/</filename> and <filename class='directory'>html/</filename>
+            directories are always overwritten. One should never edit them directly.
           </para>
         </listitem>
 
@@ -166,10 +174,9 @@
           <para>
             <guilabel>Fixing up cross-references between documents.</guilabel>
 
-            After installing the HTML files, gtkdoc-fixxref can be run to fix up any
+            After installing the HTML files, <application>gtkdoc-fixxref</application> can be run to fix up any
             cross-references between separate documents. For example, the GTK+
-            documentation
-            contains many cross-references to types documented in the GLib manual.
+            documentation contains many cross-references to types documented in the GLib manual.
           </para>
         </listitem>
       </orderedlist>
@@ -281,14 +288,14 @@
 
   <chapter id="settingup">
     <title>Setting up your project</title>
-    
+
     <para>
       The next sections describe what steps to perform to integrate GTK-Doc into
       your project. Theses section assume we work on a project called 'meep'.
       This project contains alibrary called 'libmeep' and
       an end-user app called 'meeper'.
     </para>
-    
+
     <sect1 id="settingup_docfiles">
       <title>Setting up a skeleton documentation</title>
 
@@ -320,11 +327,11 @@ meep/
 
     <sect1 id="settingup_autoconf">
       <title>Integration with autoconf</title>
-    
+
       <para>
         Very easy! Just add one line to your <filename>configure.ac</filename> script.
       </para>
-    
+
       <para>
         <example><title>Integration with autoconf</title>
           <programlisting>
@@ -344,15 +351,15 @@ GTK_DOC_CHECK(1.4)
         <listitem><para>--with-html-dir=PATH : path to installed docs</para></listitem>
         <listitem><para>--enable-gtk-doc : use gtk-doc to build documentation</para></listitem>
       </orderedlist>
-      
+
       <important>
       	<para>
-	  Gtk-Doc is disabled by default! Remember to pass the option
-	  <option>'--enable-gtk-doc'</option> to the next
-	  <filename>configure</filename> run.
-	</para>
+          Gtk-Doc is disabled by default! Remember to pass the option
+          <option>'--enable-gtk-doc'</option> to the next
+          <filename>configure</filename> run.
+        </para>
       </important>
-      
+
       <para>
         Furthermore it is recommended that you have the following line inside
         you <filename>configure.ac</filename> script.
@@ -370,7 +377,7 @@ AC_CONFIG_MACRO_DIR(m4)
         </example>
       </para>
     </sect1>
-    
+
     <sect1 id="settingup_automake">
       <title>Integration with automake</title>
 
@@ -385,15 +392,17 @@ AC_CONFIG_MACRO_DIR(m4)
         The next step is to edit the setting inside the <filename>Makefile.am</filename>.
         All the settings have a comment above that describes their purpose.
         Most settings are extra flags passed to the respective tools. Every tool
-        has a variable of the form <option>&lt;TOOLNAME&gt;_OPTIONS</option>.       
+        has a variable of the form <option>&lt;TOOLNAME&gt;_OPTIONS</option>.
+        All the tools support <option>--help</option> to list the supported
+        parameters.
       </para>
-      
+
       <para>
         You may also want to enable gtk-doc for the distcheckmake target. Just
-        add then one-liner show in the next example to you top-level 
+        add then one-liner show in the next example to you top-level
         <filename>Makefile.am</filename>:
       </para>
-      
+
       <para>
         <example><title>Enable gtk-doc during make distcheck</title>
           <programlisting>
@@ -403,7 +412,7 @@ DISTCHECK_CONFIGURE_FLAGS=--enable-gtk-doc
           </programlisting>
         </example>
       </para>
-      
+
     </sect1>
 
     <sect1 id="settingup_autogen">
@@ -414,7 +423,7 @@ DISTCHECK_CONFIGURE_FLAGS=--enable-gtk-doc
         setup the build infrastructure after a checkout from version control
         system (such as cvs). Gtk-Doc comes with a tool called
         <filename>gtkdocize</filename> which can be used in such a script.
-	It should be run before autoheader, automake or autoconf.
+        It should be run before autoheader, automake or autoconf.
       </para>
 
       <para>
@@ -448,7 +457,7 @@ gtkdocize || exit 1
       </para>
       <para>
         The first make run generates several additional files in the doc-dirs.
-        The important ones are: 
+        The important ones are:
         <filename>&lt;package&gt;.types</filename>,
         <filename>&lt;package&gt;-docs.sgml</filename>,
         <filename>&lt;package&gt;-sections.txt</filename>.
@@ -479,7 +488,7 @@ make
       <title>Integration with version control systems</title>
 
       <para>
-        As a rule of the thumb, it's those files you edit, that should go under 
+        As a rule of the thumb, it's those files you edit, that should go under
         version control. For typical projects it's these files:
         <filename>&lt;package&gt;.types</filename>
         <filename>&lt;package&gt;-docs.sgml</filename>
@@ -487,7 +496,7 @@ make
         <filename>Makefile.am</filename>
       </para>
     </sect1>
-    
+
   </chapter>
 
   <chapter id="documenting">
@@ -514,7 +523,7 @@ make
 	way of documenting code.
       </para>
     </note>
-    
+
     <!--  -->
 
     <sect1 id="documenting_syntax">
@@ -534,23 +543,23 @@ make
           </programlisting>
         </example>
       </para>
-      
+
       <para>
         The 'identifier' is one line with the name of the item the comment is
-	related to. The	syntax differs a little depending on the item.
-	(TODO add table showing identifiers)
+        related to. The	syntax differs a little depending on the item.
+        (TODO add table showing identifiers)
       </para>
 
       <para>
         The 'documentation' block is also different for each symbol type. Symbol
-	types that get parameters such as functions or macros have the parameter
-	description first followed by a blank line (just a '*').
-	Afterwards follows the detailed description. All lines just containing a
-	' * ' (blank-asterisk-blank) are converted to paragraph breaks.
+        types that get parameters such as functions or macros have the parameter
+        description first followed by a blank line (just a '*').
+        Afterwards follows the detailed description. All lines just containing a
+        ' * ' (blank-asterisk-blank) are converted to paragraph breaks.
         If you don't want a break (e.g. in preformatted example listings) add
         another space at the end of line.
       </para>
-      
+
       <para>
         One advantage of hyper-text over plain-text is the ability to have links
         in the document. Writing the correct markup for a link can be tedious
@@ -604,10 +613,10 @@ make
       <para>
         DocBook can do more that just links. One can also have lists, tables and
         examples. To enable the usage of SGML/XML tags inside doc-comments you
-        need to have <option>--sgml-mode</option> in the variable 
+        need to have <option>--sgml-mode</option> in the variable
         <symbol>MKDB_OPTIONS</symbol> inside <filename>Makefile.am</filename>.
       </para>
-      
+
       <tip>
 	<para>
 	  As already mentioned earlier Gtk-Doc is for documenting public API. Thus
@@ -648,13 +657,13 @@ make
           </programlisting>
         </example>
       </para>
-      
+
       <variablelist>
         <varlistentry>
           <term>@short_description</term>
           <listitem>
             <para>
-              A one line description of the section, that later will appear after 
+              A one line description of the section, that later will appear after
               the links in the TOC and at the top of the section page.
             </para>
           </listitem>
@@ -680,7 +689,7 @@ make
                     - The intention of a Stable interface is to enable arbitrary
                     third parties to develop applications to these interfaces,
                     release them, and have confidence that they will run on all
-                    minor releases of the product (after the one in which the 
+                    minor releases of the product (after the one in which the
                     interface was introduced, and within the same major release).
                     Even at a major release, incompatible changes are expected
                     to be rare, and to have strong justifications.
@@ -731,13 +740,13 @@ make
           </listitem>
         </varlistentry>
       </variablelist>
-      
+
       <para>
         FIXME
         having @title here, would put this title into a newly generated section
         file, but later would be obsolete (right?)
       </para>
-      
+
       <tip>
         <para>
           To avoid unnecessary recompilation after doc-changes put the section
@@ -772,7 +781,7 @@ make
  * so that they are highlighted in the output. You can also use %constant
  * for constants, function_name2() for functions and #GtkWidget for links to
  * other declarations (which may be documented elsewhere).
- * 
+ *
  * Returns: an integer.
  */
 ]]>
@@ -807,7 +816,7 @@ make
           </listitem>
         </varlistentry>
       </variablelist>
-      
+
       <para>
         Gtk-doc assumes all symbols (macros, functions) starting with '_' are
         private. They are treated like static functions.
@@ -847,7 +856,7 @@ foo_signals[FOOBARIZE] =
                 ...
 ]]></programlisting>
       </example>
-   
+
          <example><title>Struct comment block</title>
         <programlisting>
 <![CDATA[
@@ -865,11 +874,11 @@ typedef struct _FooWidget {
 ]]></programlisting>
       </example>
     </sect1>
-    
+
     <sect1 id="documenting_docbook">
       <title>Useful DocBook tags</title>
 
-      <para>      
+      <para>
         Here are some DocBook tags which are most useful when documenting the
         code.
       </para>
@@ -895,7 +904,7 @@ typedef struct _FooWidget {
         <informalexample>
           <programlisting>
 <![CDATA[
-<function>...</function> 
+<function>...</function>
 ]]>
           </programlisting>
         </informalexample>
@@ -1033,21 +1042,21 @@ typedef struct _FooWidget {
           </programlisting>
         </informalexample>
       </para>
-    
+
     </sect1>
   </chapter>
 
   <chapter id="metafiles">
     <title>Filling the extra files</title>
-    
+
     <para>
       There are a couple of extra file, that need to be maintained along with
-      the inline source code comments: 
+      the inline source code comments:
       <filename>&lt;package&gt;.types</filename>,
       <filename>&lt;package&gt;-docs.sgml</filename>,
       <filename>&lt;package&gt;-sections.txt</filename>.
     </para>
-    
+
     <sect1 id="metafiles_types">
       <title>Editing the types file</title>
 
@@ -1085,7 +1094,7 @@ gtk_arrow_get_type
         page per class or module as a separate file. The master document
         includes them and place them in a order.
       </para>
-      
+
       <para>
         While Gtk-Doc creates a template master document for you, later run will
         not touch it again. This means that one can freely structure the
@@ -1097,11 +1106,11 @@ gtk_arrow_get_type
           Do not create tutorials as extra documents. Just write extra chapters.
           The benefit of directly embedding the tutorial for your library into
           the API documentation is that it is easy to link for the tutorial to
-          symbol documentation. Apart chances are higher that the tutorial gets 
+          symbol documentation. Apart chances are higher that the tutorial gets
           updates along with the library.
         </para>
       </tip>
-      
+
       <para>
         So what are the things to change inside the master document? For a start
         is only a little. There are two placeholders for the package-name and
@@ -1122,14 +1131,14 @@ gtk_arrow_get_type
           </programlisting>
         </example>
       </para>
-      
+
     </sect1>
 
     <sect1 id="metafiles_sections">
       <title>Editing the section file</title>
 
       <para>
-        The section file is used to organise the documentation output by 
+        The section file is used to organise the documentation output by
         Gtk-Doc. Here one specifies which symbol belongs to which module or
         class and control the visibility (public or private).
       </para>
@@ -1139,7 +1148,7 @@ gtk_arrow_get_type
         Blank lines are ignored and lines starting with a '#' are treated as
         comment lines.
       </para>
-      
+
       <para>
         The &lt;FILE&gt; ... &lt;/FILE&gt; tag is used to specify the file name,
         without any suffix. For example, using '&lt;FILE&gt;gnome-config&lt;/FILE&gt;'
@@ -1151,13 +1160,13 @@ gtk_arrow_get_type
         title, or for gobjects it is based on the gobjects class name converted
         to lower case).
       </para>
-      
-      <para>        
+
+      <para>
         The &lt;TITLE&gt; ... &lt;/TITLE&gt; tag is used to specify the title of
         the section. It is only useful before the templates are initially
         created, since the title set in the template file overrides this.
       </para>
-      
+
       <para>
         You can group items in the section by using the &lt;SUBSECTION&gt; tag.
         Currently it outputs a blank line between subsections in the synopsis
@@ -1173,7 +1182,7 @@ gtk_arrow_get_type
         the object hierarchy and the list of implemented or required interfaces,
         add them to a Private subsection.
       </para>
-      
+
       <para>
         You can also use &lt;INCLUDE&gt; ... &lt;/INCLUDE&gt; to specify the
         #include files which are shown in the synopsis sections.
@@ -1184,7 +1193,7 @@ gtk_arrow_get_type
       </para>
 
     </sect1>
-    
+
   </chapter>
 
   <chapter id="reports">
@@ -1192,12 +1201,12 @@ gtk_arrow_get_type
 
     <para>
       A Gtk-Doc run generates report files inside the documentation directory.
-      The generated files are named: 
+      The generated files are named:
       <filename>&lt;package&gt;-undocumented.txt</filename> and
       <filename>&lt;package&gt;-unused.txt</filename>.
       Both are plain text files that can be viewed and postprocessed easily.
     </para>
-    
+
     <para>
       The <filename>&lt;package&gt;-undocumented.txt</filename> file starts with
       the documentation coverage summary. Below are two sections divided by
@@ -1206,7 +1215,7 @@ gtk_arrow_get_type
       those, which have documentation, but where e.g. a new parameter has been
       added.
     </para>
-    
+
     <para>
       The <filename>&lt;package&gt;-unused.txt</filename> file lists symbol
       names, where the Gtk-Doc scanner has found documentation, but does not
@@ -1218,7 +1227,7 @@ gtk_arrow_get_type
 
   <chapter id="faq">
     <title>Frequently asked question</title>
-    
+
     <segmentedlist>
       <?dbhtml list-presentation="list"?>
       <segtitle>Question</segtitle>
@@ -1251,7 +1260,7 @@ gtk_arrow_get_type
 	<seg>A new symbol does not appear in the docs.</seg>
 	<seg>FIXME (section file, proper doc comment)</seg>
       </seglistitem>
-    
+
       <!-- warnings: -->
       <seglistitem>
 	<seg>Parameter described in source code comment block but does not exist</seg>
@@ -1263,7 +1272,7 @@ gtk_arrow_get_type
       </seglistitem>
     </segmentedlist>
   </chapter>
-  
+
   <!-- ======== Appendix: FDL ================================== -->
   &FDL;
 
