@@ -1,3 +1,9 @@
+2007-07-15  Stefan Kost  <ensonic@users.sf.net>
+
+	* gtk-doc-manual.xml:
+	Bump version. Add more markup. Tell that one can use toolname --help to
+	get the allowed opetion for Makefile.am. Improve 'how does it work' section.
+
 2007-06-11  Damon Chaplin  <damon@gnome.org>
 
 	* gtk-doc-manual.xml: added tip about using entities like &num; to
